--- a/src/style/style.css
+++ b/src/style/style.css
@@ -101,25 +101,39 @@ section {
 }
 
 .header .navbar-nav {
-  visibility: hidden;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
-  width: 346px;
-  padding-left: 72px;
-  padding-top: 65px;
+  max-width: 346px;
+  width: 80%;
+  height: 500px;
   background: #fff;
-  -webkit-transition: opacity 0.5s ease;
-  -o-transition: opacity 0.5s ease;
-  transition: opacity 0.5s ease;
+  padding: 120px 0 90px 72px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.8s ease;
+  -o-transition: opacity 0.8s ease;
+  transition: opacity 0.8s ease;
 }
 
 .header .navbar-nav.active {
   visibility: visible;
-  -webkit-transition: opacity 0.5s ease;
-  -o-transition: opacity 0.5s ease;
-  transition: opacity 0.5s ease;
+  -webkit-transition: opacity .8s ease;
+  -o-transition: opacity .8s ease;
+  transition: opacity .8s ease;
   opacity: 1;
 }
 
@@ -133,6 +147,12 @@ section {
   text-transform: uppercase;
   color: #000;
   text-decoration: none;
+}
+
+.header .navbar .nav-link-300 {
+  font-weight: 300;
+  text-transform: capitalize;
+  font-size: 18px;
 }
 
 .header .burger {
@@ -253,9 +273,8 @@ section {
   margin-bottom: 31px;
 }
 
-.category-carousel .category-nav .category-prev,
-.category-carousel .category-nav .category-next {
-  background: none;
+.category-carousel .owl-nav .owl-prev,
+.category-carousel .owl-nav .owl-next {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -263,22 +282,27 @@ section {
           transform: translateY(-50%);
 }
 
-.category-carousel .category-nav .category-prev i,
-.category-carousel .category-nav .category-next i {
-  color: #fff;
-  font-size: 25px;
+.category-carousel .owl-nav .owl-prev:hover,
+.category-carousel .owl-nav .owl-next:hover {
+  background: none;
 }
 
-.category-carousel .category-nav .category-prev i:hover,
-.category-carousel .category-nav .category-next i:hover {
+.category-carousel .owl-nav .owl-prev span,
+.category-carousel .owl-nav .owl-next span {
+  color: #fff;
+  font-size: 60px;
+}
+
+.category-carousel .owl-nav .owl-prev span:hover,
+.category-carousel .owl-nav .owl-next span:hover {
   cursor: pointer;
 }
 
-.category-carousel .category-nav .category-prev {
+.category-carousel .owl-nav .owl-prev {
   left: 100px;
 }
 
-.category-carousel .category-nav .category-next {
+.category-carousel .owl-nav .owl-next {
   right: 100px;
 }
 
@@ -652,12 +676,12 @@ section {
   display: flex;
 }
 
-.footer__ul {
+.footer-nav {
   color: white;
   font-size: 18px;
 }
 
-.footer__li {
+.footer-item {
   color: white;
   font-weight: normal;
   list-style: none;
@@ -665,7 +689,7 @@ section {
   font-weight: 300;
 }
 
-.footer__li:first-child {
+.footer-item:first-child {
   font-weight: 700;
 }
 
@@ -678,4 +702,94 @@ section {
 
 .footer__img {
   padding-right: 152px;
+}
+
+@media (max-width: 576px) {
+  .header .navbar-search {
+    display: none;
+  }
+  .header .burger {
+    top: 40px;
+    right: 40px;
+  }
+  .home {
+    text-align: center;
+    padding-top: 300px;
+  }
+  .home__subtitle {
+    font-size: 30px;
+  }
+  .category-carousel .owl-nav .owl-next,
+  .category-carousel .owl-nav .owl-prev {
+    top: 100%;
+    -webkit-transform: translateY(5px);
+        -ms-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+  .category-carousel .owl-nav .owl-next:hover,
+  .category-carousel .owl-nav .owl-prev:hover {
+    background: none;
+  }
+  .category-carousel .owl-nav .owl-next span,
+  .category-carousel .owl-nav .owl-prev span {
+    font-size: 60px;
+    color: #000;
+  }
+  .category-carousel .owl-nav .owl-prev {
+    left: 50%;
+    -webkit-transform: translateX(-30px);
+        -ms-transform: translateX(-30px);
+            transform: translateX(-30px);
+  }
+  .category-carousel .owl-nav .owl-next {
+    right: 50%;
+    -webkit-transform: translateX(30px);
+        -ms-transform: translateX(30px);
+            transform: translateX(30px);
+  }
+  .category-carousel .category-nav {
+    display: none;
+  }
+  .favorites-secondary {
+    margin-top: 30px;
+  }
+  .describe {
+    padding: 50px 10px;
+    text-align: justify;
+  }
+  .about {
+    padding-top: 10px;
+    padding-bottom: 100px;
+  }
+  .about__title {
+    margin-bottom: 100px;
+  }
+  .about .col:last-child .wrapper {
+    margin-bottom: 0;
+  }
+  .about .wrapper {
+    margin-bottom: 100px;
+  }
+  .about .wrapper__text {
+    text-align: center;
+  }
+  .news-carousel .news-nav .news-prev {
+    top: 100%;
+    left: 50%;
+    -webkit-transform: translate(-30px, 30px);
+        -ms-transform: translate(-30px, 30px);
+            transform: translate(-30px, 30px);
+  }
+  .news-carousel .news-nav .news-next {
+    top: 100%;
+    right: 50%;
+    -webkit-transform: translate(30px, 30px);
+        -ms-transform: translate(30px, 30px);
+            transform: translate(30px, 30px);
+  }
+  .footer__img {
+    margin: 0 auto 50px;
+    display: block;
+    padding-right: 0;
+  }
 }
